# tdro

./: .gitignore  README.md  pyproject.toml
config/: ds_stage0.yaml  ds_stage1.yaml  ds_stage2.yaml  ds_stage3_config.json  ds_stage3_w_config.yaml  fsdp_full_shard.yaml  fsdp_hybrid_shard.yaml  fsdp_shard_grad_op.yaml  uniform_sampling_s0.json
config/robust_weights/: README.md  curr_weights.json  ema_weights.json  mean_weights.json  top20_weights.json  top30_weights.json  top40_weights.json  top50_weights.json  top60_weights.json  top70_weights.json  top80_weights.json  top90_weights.json
data/: HN_mine.md  README.md  build_train_hn_dp.py  inspect_duplicates.py
eval/: README.md  eval_arguments.py  evaluate_mkqa.py  evaluate_model.py  modeling_utils.py  qa_utils.py  test_beir.sh  test_miracl.sh  test_mkqa.sh
eval/load_utils/: beir_dataloader.py  download_beir.sh  download_miracl.sh  download_mkqa.sh  miracl_dataloader.py
scripts/: s0_train_baseline_model.sh  s1_tdro.sh  s2_train_optimized_model.sh
src/tdro/dro/: arguments.py  fit.py  modeling_group_dro_v2.py  trainer.py
src/tdro/finetune/: arguments.py  data_utils.py  fit.py  modeling_encoder.py  trainer.py
src/tdro/retriever/: faiss_index.py  faiss_search.py
src/tdro/utils/: data_utils.py  homogenous_iterable_dataset.py  monkey_patch.py  nested_input.py
